# startup101-backend

./: .env.example  .gitignore  QUICKSTART.md  README.md  openapi.json  pyproject.toml  redoc-static.html
app/: main.py
app/api/: __init__.py  admin.py  classification.py  deps.py  feedback.py  health.py  model.py
app/core/: __init__.py  config.py  exceptions.py  logging.py  middleware.py
app/db/: database.py
app/models/: __init__.py  classification.py  feedback.py  label.py  model_registry.py  review.py
app/schemas/: __init__.py  classification.py  error.py  feedback.py  label.py  model.py  review.py
app/services/: __init__.py  classifier.py  feature_service.py  reason_service.py  training.py
models/: README.md
scripts/: create_sample_data.py  train_initial_model.py
